# crate

./: .gitignore  README.md  pyproject.toml
crate/: __init__.py  analyze.py  cli.py  config.py  db.py  download.py  rekordbox.py  tagging.py
tests/: conftest.py  test_camelot.py  test_cli.py  test_db.py  test_e2e.py  test_rekordbox.py  test_rekordbox_golden.py  test_title_parse.py
tests/golden/: collection.xml
