[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crate"
version = "0.1.0"
description = "DJ library automation: download, analyze BPM/key, tag, and export Rekordbox XML."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "yt-dlp>=2024.1.0",
    "librosa>=0.10",
    "mutagen>=1.47",
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
crate = "crate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["crate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
